--- a/demo/increment.html
+++ b/demo/increment.html
@@ -3,12 +3,11 @@
   <style type="text/css">
     * {
       font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
     }
     code {
       display: block;
       padding: 5px;
-      background-color: rgb(249, 231, 231);
+      background-color: yellow;
     }
   </style>
   <script
@@ -75,16 +74,17 @@
 
     // 3、从启动的server里选择一个私钥，合约交易时用到
     const privatekey =
-      '0x66f490eccb60103e8f5cf04954986da3c6efd99b1a2d34431222722c6ece87ae'
+      '0x04ffef0028921b2d87d7a20792cd164ffde68aed5d941c61212587042db0292c'
 
     // 4、连接到合约地址，地址来自部署时得到
-    const contractAddress = '0xed1175b345366649F48d100a68D3EA9B0AebC30F'
+    const contractAddress = '0x5A31f0b24118Fc6B4a83F0FB1461E42Da56CEc64'
     const incrementer = new web3.eth.Contract(abi, contractAddress)
+
     // 通过私钥访问
     const account = web3.eth.accounts.privateKeyToAccount(privatekey)
     const accountFrom = {
       privateKey: privatekey,
-      accountAddress: account.address,
+      accountAddress: web3.utils.toChecksumAddress(account.address),
     }
     // 打印合约里面的全部方法
     console.log('incrementer.methods: ', incrementer.methods)
@@ -93,7 +93,17 @@
 
     // 获取合约里面的数字
     async function getNumber() {
-      console.log(`Making a call to contract at address: ${contractAddress}`)
+      console.log('调用合约地址:', contractAddress)
+
+      // 调用测试
+      incrementer.methods
+        .getNumber()
+        .call()
+        // .call({ from: accountFrom })
+        .then((result) => {
+          console.log('调用结果:', result)
+        })
+
       const result = await incrementer.methods.getNumber().call()
       console.log(`incrementer.methods.getNumber(): ${result}`)
 
@@ -104,11 +114,6 @@
     async function increment(incrementNumber = 5) {
       const incrementTx = incrementer.methods.increment(incrementNumber)
       console.log(`执行新增 ${incrementNumber} ，合约地址: ${contractAddress}`)
-
-      const accountFrom = {
-        privateKey: privatekey,
-        accountAddress: account.address,
-      }
 
       // 交易签名
       const createTransaction = await web3.eth.accounts.signTransaction(
@@ -217,6 +222,7 @@
     }
   </script>
   <h1>Web3 DApp 智能合约调用示例</h1>
+  本页面直接浏览器本地打开即可，无需部署webserver，通过url方式打开。
   <p id="basicInfo">
     服务地址: ${serverAddress} <br />
     私钥: ${privatekey} <br />
